# CUBECUBECUBECUBECUBECUBE

./: Cargo.toml  gliConfig.ini
objs/TheRock/: TheRock.mtl
shaders/: cube_color_f.glsl  cube_color_v.glsl  cube_depth_f.glsl  cube_normal_f.glsl  cube_pos_f.glsl  cube_pos_v.glsl  light_f.glsl  light_v.glsl  ocean_f.glsl  ocean_v.glsl  shadows_f.glsl  texture_f.glsl  texture_v.glsl
src/: input.rs  main.rs  map.rs  quad.rs  shader.rs  vxl.rs
src/components/: flying_controls.rs  light.rs  mod.rs  model.rs  position.rs  rotate_randomly.rs  rotation.rs  textured_model.rs
src/resources/: active_texture.rs  inputs.rs  mod.rs  shaders.rs  window_info.rs  writable_textures.rs
src/shaders/: 2d_f.glsl  cube_depth_f.glsl  cube_f.glsl  cube_normal_f.glsl  cube_normal_v.glsl  cube_v.glsl  ocean_f.glsl  ocean_v.glsl  shadows_f.glsl
src/systems/: add_light.rs  flying_controls.rs  fps_controls.rs  mod.rs  reload_shaders.rs  render.rs  resize_textures.rs  rotate_randomly.rs  switch_active_texture.rs  update_window.rs
