[package]
name = "gl"
version = "0.1.0"
authors = ["Andrew <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.26.0"
image = "*"
nalgebra="*"
obj-rs = { version = "*", features = ["glium-support"] }
nalgebra-glm = "0.3"
